<resources>
    <string name="Are_connected_to_each_other">Connecting, please wait.</string>
    <string name="Connection_failure">Failed to connect, please try again.</string>
    <string name="Download_the_pictures">Download image: 0%</string>
    <string name="Download_the_pictures_new">Download image:</string>
    <string name="Failed_to_download_file">Failed to download file:</string>
    <string name="File_does_not_exist">File does not exist</string>
    <string name="File_expired">File expired:</string>
    <string name="FreeformWindowOrientation_landscape" />
    <string name="FreeformWindowOrientation_portrait" />
    <string name="FreeformWindowSize_maximize" />
    <string name="FreeformWindowSize_phone" />
    <string name="FreeformWindowSize_tablet" />
    <string name="Hands_free">Hands-free</string>
    <string name="Has_been_cancelled">Canceled</string>
    <string name="Image_expired">Image expired!</string>
    <string name="In_the_call">Busy...</string>
    <string name="Is_download_voice_click_later">Downloading audio, click when done.</string>
    <string name="Is_not_yet_connected_to_the_server">Not connected to server</string>
    <string name="Making_sure_your_location">Finding your location...</string>
    <string name="N_A">N/A</string>
    <string name="N_NCalendar_calendar_background_illegal">折叠日历不能使用此方法</string>
    <string name="N_NCalendar_child_num">NCalendar中最多只能有一个直接子view</string>
    <string name="N_NCalendar_set_calendar_background_illegal">折叠日历请调用setMonthCalendarBackground()和setWeekCalendarBackground()</string>
    <string name="N_calendarState_illegal">不允许直接设置成CalendarState.MONTH_STRETCH，可以设置成CalendarState.WEEK或者CalendarState.MONTH</string>
    <string name="N_date_format_illegal">需要 yyyy-MM-dd 格式的日期</string>
    <string name="N_date_format_jump">jumpDate的参数需要正确的年月日数据</string>
    <string name="N_disabledString">日期超出许可范围</string>
    <string name="N_end_after_20991231">endDate必须在2099-12-31之前</string>
    <string name="N_factual_scroll_view">factual_scroll_view</string>
    <string name="N_holidayText">休</string>
    <string name="N_horizontalScrollString">设置了日历不可滑动，不能跳转到其他页面</string>
    <string name="N_initialize_date_illegal">日期区间必须包含初始化日期</string>
    <string name="N_set_checked_dates_count_illegal">设置的日期数量和MultipleCountModel冲突</string>
    <string name="N_set_checked_dates_illegal">只能多选模式下才能使用此方法</string>
    <string name="N_start_after_end">startDate必须在endDate之前</string>
    <string name="N_start_before_19010101">startDate必须在1901-01-01之后</string>
    <string name="N_stretch_month_height">日历拉伸之后的高度必须大于正常高度，日历默认的正常高度为300dp</string>
    <string name="N_workdayText">班</string>
    <string name="Network_error">Network error</string>
    <string name="Open_the_equipment_failure">Failed to open device!</string>
    <string name="Recording_without_permission">No recording permission</string>
    <string name="Refused">Rejected</string>
    <string name="Send_voice_need_sdcard_support">You need an SD card to send voice messages</string>
    <string name="The_other_is_hang_up">Hung up</string>
    <string name="The_other_is_not_online">The other party is offline</string>
    <string name="The_other_is_on_the_phone">The other party is in a call</string>
    <string name="The_other_is_on_the_phone_please">Busy, please try again.</string>
    <string name="The_other_party_did_not_answer">Not answered</string>
    <string name="The_other_party_did_not_answer_new">Not answered</string>
    <string name="The_other_party_has_refused_to">The other party rejected the call</string>
    <string name="The_other_party_is_not_online">The other party is offline, please try again later.</string>
    <string name="The_other_party_refused_to_accept">Rejected</string>
    <string name="The_recording_time_is_too_short">Speech too short</string>
    <string name="The_video_to_start">Recording started</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMIgnore">忽略该版</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMNotNow">取消</string>
    <string name="UMTargetSize">新版本大小:</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMUpdateCheck">2.6.0.1.20150312</string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateNow">立即升级</string>
    <string name="UMUpdateSize">仅需要下载:</string>
    <string name="UMUpdateTitle">发现全新版本</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="Video_expired">Video expired!</string>
    <string name="Video_footage">Shoot video</string>
    <string name="Whether_to_send">Send now?</string>
    <string name="a_cache">a-cache</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_app_name">关于医考帮</string>
    <string name="according_subject">学科</string>
    <string name="according_year">年份</string>
    <string name="action_cant_be_completed">The requested action could not be completed.</string>
    <string name="action_copy">Copy</string>
    <string name="action_delete">Delete</string>
    <string name="action_forward">Forward</string>
    <string name="action_hide">Hide</string>
    <string name="action_multi_select">Choose multiple</string>
    <string name="action_reTranslate">Retranslate</string>
    <string name="action_recall">Recall</string>
    <string name="action_translate">Translate</string>
    <string name="adactivity_missing">%s was not detected in AndroidManifest.xml!</string>
    <string name="adactivity_no_type">AdActivity launched with no type.</string>
    <string name="add_floating_window">浮窗</string>
    <string name="add_to_download">添加下载</string>
    <string name="add_vote_item_label">增加选项</string>
    <string name="adsize_too_big" formatted="false">E103: You requested an Ad larger than the measured ad space. Ad space size: %dx%d, request size: %dx%d</string>
    <string name="again_input_pwd">再次输入密码</string>
    <string name="agc_039385256A8E064A3FBA0E5DC382B8F03961789D7A12A9D0BB248FFEDD6D1470">000F999A93021560AC40EBDD6681283CCF16DD914D020EDE4B6028548574FF01E7BC389EC93B71D8144E85C2CFAFC657208AB95A088DB3418C4DD3E267CB2EB77330542959C2743BA973C27954D3121F72</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">00DFDDFEC72DA6BD6BDD2C093790D5B4D24EEE624D6067E4529C52C069833EE379B5E964DE8ECC7A92A0920A42A59B43CCEE9FA1FE47A4B1DDA3B5C86D3D4CFCE893EEAC44352A0BE7F2FBF0CE751E9B64DD188FF5DE98C5D72B235F8D4FB617DA</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">557FAED695A5C00AC0E1B1D4831B580F</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">004D84A876A16A968919B3293B851E68CF53F62AE8EE0A968A3DF4886CD6F579F1</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">0044420494A5FEE267EC8AC1E35F78259E8AA55763D853D9CE98FD266B838F36911425ECF4B6470979D770F5730856AC2E</string>
    <string name="alivc_brightness">亮度</string>
    <string name="alivc_center">中心</string>
    <string name="alivc_control">调节</string>
    <string name="alivc_left_side">左侧</string>
    <string name="alivc_progress">进度</string>
    <string name="alivc_right_side">右侧</string>
    <string name="alivc_speed_mode">倍速播放</string>
    <string name="alivc_speed_one_times">正常</string>
    <string name="alivc_speed_opt_times">1.5倍速</string>
    <string name="alivc_speed_optf_times">1.25倍速</string>
    <string name="alivc_speed_twice_times">2.0倍速</string>
    <string name="alivc_volume">音量</string>
    <string name="bbs_label">论坛</string>
    <string name="cancel">取消</string>
    <string name="common_commit">提交</string>
    <string name="confirm">确定</string>
    <string name="heartlung_answer">解析有误</string>
    <string name="heartlung_error">纠错</string>
    <string name="heartlung_feedback">请输入详细的描述，编辑老师将会在第一时间修正该错误。</string>
    <string name="heartlung_history">纠错记录</string>
    <string name="heartlung_question">题目有误</string>
    <string name="input_exam_code">输入考试码</string>
    <string name="input_exam_code_hint">请输入考试码获取试卷参与考试</string>
    <string name="pls_input_exam_code">请输入考试码</string>
    <string name="reply_me">回复我</string>
    <string name="tiku_label">题库</string>
    <string name="title_kaoyan">考研</string>
    <string name="title_record">最近访问</string>
    <string name="title_shenghuo">其他</string>
    <string name="title_zige">考研院校</string>
</resources>