<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_white_round_conner"
    android:paddingTop="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/text_color_default"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_exam_code"/>
    <TextView
        android:textSize="14sp"
        android:textColor="?attr/secondary_text_color"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/input_exam_code_hint"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:textColor="?attr/first_text_color"
        android:textColorHint="#bfbfbf"
        android:id="@+id/et_exam_code"
        android:background="@drawable/bg_edit_input"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/pls_input_exam_code"
        android:textCursorDrawable="@drawable/input_text_cursor"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="12dp"/>
    <View
        android:background="#dcdfe6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textSize="16sp"
            android:textColor="?attr/first_text_color"
            android:gravity="center"
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:layout_weight="1"/>
        <View
            android:background="#dcdfe6"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <TextView
            android:textSize="16sp"
            android:textColor="?attr/app_theme"
            android:gravity="center"
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/confirm"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
