<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#88000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/alivc_guide_left"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/alivc_guide_center"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/alivc_guide_right"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp">
        <LinearLayout
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textSize="@dimen/alivc_common_font_17"
                android:textColor="#eeeeee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alivc_left_side"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/alivc_common_font_17"
                    android:textColor="@color/alivc_player_theme_blue"
                    android:id="@+id/bright_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alivc_brightness"/>
                <TextView
                    android:textSize="@dimen/alivc_common_font_17"
                    android:textColor="#eeeeee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alivc_control"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textSize="@dimen/alivc_common_font_17"
                android:textColor="#eeeeee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alivc_center"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="17sp"
                    android:textColor="@color/alivc_player_theme_blue"
                    android:id="@+id/progress_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alivc_progress"/>
                <TextView
                    android:textSize="@dimen/alivc_common_font_17"
                    android:textColor="#eeeeee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alivc_control"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textSize="@dimen/alivc_common_font_17"
                android:textColor="#eeeeee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alivc_right_side"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/alivc_common_font_17"
                    android:textColor="@color/alivc_player_theme_blue"
                    android:id="@+id/volume_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alivc_volume"/>
                <TextView
                    android:textSize="@dimen/alivc_common_font_17"
                    android:textColor="#eeeeee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alivc_control"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
