<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="12sp"
        android:textColor="@color/color_text_title"
        android:id="@+id/tv_circle_header_zige"
        android:padding="@dimen/header_item_title_padding"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/content_item_padding_small"
        android:text="@string/title_kaoyan"/>
    <include
        android:id="@+id/view_circle_header_zige_divider"
        android:visibility="gone"
        layout="@layout/view_divider"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ll_circle_header_zige_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="12sp"
        android:textColor="#424242"
        android:id="@+id/tv_circle_header_kaoyan"
        android:padding="@dimen/header_item_title_padding"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/content_item_padding_small"
        android:text="@string/title_zige"/>
    <include
        android:id="@+id/view_circle_header_kaoyan_divider"
        android:visibility="gone"
        layout="@layout/view_divider"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ll_circle_header_kaoyan_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="12sp"
        android:textColor="@color/color_text_title"
        android:id="@+id/tv_circle_header_shenghuo"
        android:padding="@dimen/header_item_title_padding"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/content_item_padding_small"
        android:text="@string/title_shenghuo"/>
    <include
        android:id="@+id/view_circle_header_shenghuo_divider"
        layout="@layout/view_divider"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ll_circle_header_shenghuo_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="12sp"
        android:textColor="@color/color_text_title"
        android:padding="@dimen/header_item_title_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/content_item_padding_small"
        android:text="@string/title_record"/>
</merge>
