<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/speed_view"
        android:background="#99000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true">
        <TextView
            android:textSize="@dimen/alivc_common_font_14"
            android:textColor="#e7e7e7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/alivc_common_margin_40"
            android:text="@string/alivc_speed_mode"/>
        <RadioGroup
            android:orientation="horizontal"
            android:id="@+id/speed_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/alivc_common_margin_60">
            <RadioButton
                android:textSize="@dimen/alivc_common_font_16"
                android:textColor="@color/alivc_player_font_speed_blue"
                android:gravity="center"
                android:id="@+id/normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/alivc_speed_one_times"
                android:drawableTop="@drawable/alivc_speed_dot_blue"
                android:drawablePadding="@dimen/alivc_common_padding_10"
                android:layout_weight="1"/>
            <RadioButton
                android:textSize="@dimen/alivc_common_font_16"
                android:textColor="@color/alivc_player_font_speed_blue"
                android:gravity="center"
                android:id="@+id/one_quartern"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/alivc_speed_optf_times"
                android:drawableTop="@drawable/alivc_speed_dot_blue"
                android:drawablePadding="@dimen/alivc_common_padding_10"
                android:layout_weight="1"/>
            <RadioButton
                android:textSize="@dimen/alivc_common_font_16"
                android:textColor="@color/alivc_player_font_speed_blue"
                android:gravity="center"
                android:id="@+id/one_half"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/alivc_speed_opt_times"
                android:drawableTop="@drawable/alivc_speed_dot_blue"
                android:drawablePadding="@dimen/alivc_common_padding_10"
                android:layout_weight="1"/>
            <RadioButton
                android:textSize="@dimen/alivc_common_font_16"
                android:textColor="@color/alivc_player_font_speed_blue"
                android:gravity="center"
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/alivc_speed_twice_times"
                android:drawableTop="@drawable/alivc_speed_dot_blue"
                android:drawablePadding="@dimen/alivc_common_padding_10"
                android:layout_weight="1"/>
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:textSize="@dimen/alivc_common_font_14"
        android:textColor="#e7e7e7"
        android:gravity="center"
        android:id="@+id/speed_tip"
        android:background="#99000000"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
</merge>
