<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/dp_16"
    android:paddingRight="@dimen/dp_16"
    android:paddingBottom="@dimen/dp_16"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_472"
    android:paddingHorizontal="@dimen/dp_16"
    app:bl_corners_topLeftRadius="@dimen/dp_12"
    app:bl_corners_topRightRadius="@dimen/dp_12"
    app:bl_solid_color="@color/c_f8f8f8">
    <com.noober.background.view.BLView
        android:id="@+id/topV"
        android:layout_width="@dimen/dp_56"
        android:layout_height="@dimen/dp_6"
        android:layout_marginTop="@dimen/dp_10"
        app:bl_corners_radius="@dimen/dp_3"
        app:bl_solid_color="@color/c_f0f1f6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="@dimen/sp_17"
        android:textStyle="bold"
        android:textColor="@color/c_2f2f46"
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_18"
        android:text="@string/heartlung_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topV"/>
    <TextView
        android:textSize="@dimen/sp_14"
        android:textColor="@color/c_8f91a1"
        android:id="@+id/historyTv"
        android:padding="@dimen/dp_6"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heartlung_history"
        app:layout_constraintBottom_toBottomOf="@+id/titleTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleTv"/>
    <com.noober.background.view.BLTextView
        android:textSize="@dimen/sp_14"
        android:textColor="@color/c_50536b"
        android:id="@+id/questionTv"
        android:paddingLeft="@dimen/dp_6"
        android:paddingTop="@dimen/dp_6"
        android:paddingRight="@dimen/dp_6"
        android:paddingBottom="@dimen/dp_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/heartlung_question"
        android:paddingHorizontal="@dimen/dp_6"
        android:paddingVertical="@dimen/dp_6"
        app:bl_corners_radius="@dimen/dp_6"
        app:bl_stroke_color="@color/c_2f2f46"
        app:bl_stroke_width="@dimen/dp_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTv"/>
    <com.noober.background.view.BLTextView
        android:textSize="@dimen/sp_14"
        android:textColor="@color/c_8f91a1"
        android:id="@+id/answerTv"
        android:paddingLeft="@dimen/dp_6"
        android:paddingTop="@dimen/dp_6"
        android:paddingRight="@dimen/dp_6"
        android:paddingBottom="@dimen/dp_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heartlung_answer"
        android:layout_marginStart="@dimen/dp_12"
        android:paddingHorizontal="@dimen/dp_6"
        android:paddingVertical="@dimen/dp_6"
        app:bl_corners_radius="@dimen/dp_6"
        app:bl_stroke_color="@color/c_d4d5da"
        app:bl_stroke_width="@dimen/dp_1"
        app:layout_constraintBottom_toBottomOf="@+id/questionTv"
        app:layout_constraintStart_toEndOf="@+id/questionTv"
        app:layout_constraintTop_toTopOf="@+id/questionTv"/>
    <com.noober.background.view.BLEditText
        android:textSize="@dimen/sp_14"
        android:textColor="@color/c_2f2f46"
        android:textColorHint="@color/c_8f91a1"
        android:gravity="top"
        android:id="@+id/et"
        android:paddingLeft="@dimen/dp_16"
        android:paddingTop="@dimen/dp_10"
        android:paddingRight="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_270"
        android:layout_marginTop="@dimen/dp_12"
        android:hint="@string/heartlung_feedback"
        android:maxLength="200"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingVertical="@dimen/dp_10"
        app:bl_corners_radius="@dimen/dp_12"
        app:bl_solid_color="@color/color_white"
        app:layout_constraintTop_toBottomOf="@+id/questionTv"/>
    <com.noober.background.view.BLTextView
        android:textSize="@dimen/sp_16"
        android:textColor="@color/color_white"
        android:gravity="center"
        android:id="@+id/submitTv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/common_commit"
        app:bl_corners_radius="@dimen/dp_12"
        app:bl_solid_color="@color/c_3776ff"
        app:layout_constraintTop_toBottomOf="@+id/et"/>
</androidx.constraintlayout.widget.ConstraintLayout>
